--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
   },
   "devDependencies": {
     "vite": "^4.2.0"
+  },
+  "dependencies": {
+    "fetch": "^1.1.0",
+    "gsap": "^3.11.5",
+    "request": "^2.88.2",
+    "three": "^0.150.1"
   }
 }
